--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,8 @@ a {
   color: inherit;
   background-color: #eee;
   box-sizing: border-box;
-  position: relative; }
+  position: relative;
+  transition: all 0.33s ease-in-out; }
   .superheader h1 {
     font-size: 1266%;
     font-weight: 700; }
@@ -333,17 +334,19 @@ a {
     font-size: 200%;
     font-weight: lighter;
     letter-spacing: 1px; }
-  .superheader .container {
-    margin: 12px 24px; }
 
 .super-collapse {
   height: 15vw; }
   .super-collapse h1 {
     font-size: 300%; }
+  .super-collapse .container {
+    margin: 4px 8px; }
 
 .super-fill {
   max-height: 100%;
   height: 100vw; }
+  .super-fill .container {
+    margin: 12px 24px; }
 
 .superheader > .container {
   margin-top: 3rem; }
