--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,7 @@ linear-gradient(to bottom, rgba(255, 255, 255, .1) 1px, transparent 1px);
   padding-right: 15px;
   padding-left: 15px;
   position: relative;
+  z-index: 1;
 }
 .centered{
   margin:0 auto;
@@ -154,7 +155,14 @@ linear-gradient(to bottom, rgba(255, 255, 255, .1) 1px, transparent 1px);
   color: #BFc0c0;
   background: #4F5D75;
 }
-
+.block-two{
+  padding:2em;
+  font-size: 2em;
+}
+.block-three{
+  padding:2em;
+  font-size: 2em;
+}
 .row{
   margin-right: -15px;
   margin-left: -15px;
