--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,12 @@
 
 @import "reset.scss";
 @import "html5boilerplate.scss";
+@import "mixins.scss";
+@import "palette.scss";
 
 @import url('http://fonts.googleapis.com/css?family=Raleway:700,400,300');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext');
 
-// /*
-//     Palette
-//     2d3142-bfc0c0-ffffff-ef8354-4f5d75
-//     SASS: node-sass --include-path scss scss/style.scss css/main.css --watch
-// */
 
 
 body{
@@ -18,6 +15,15 @@ body{
 }
 h1{
   font-size:3em;
+}
+h2{
+  font-size: 2em;
+}
+h3{
+  font-size: 1.666em;
+}
+h4{
+  font-size:1.333em;
 }
 a{
   text-decoration: none;
@@ -29,13 +35,11 @@ a{
   width:100%;
   max-width: 2356px;
   margin:0 auto;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  @include border-box;
 }
 .superheader{
   h1{
-    font-size: 1266%;
+    font-size: 5em;
     font-weight: 700;
   }
 
@@ -45,47 +49,41 @@ a{
     font-weight: lighter;
     letter-spacing: 1px;
   }
-
+  overflow: hidden;
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
   background-color: #eee;
-  box-sizing: border-box;
   position: relative;
-  transition: all 0.33s ease-in-out;
+  transition: all 0.50s ease-in-out;
+  @include border-box;
 
-}
-.super-collapse{
-  height:15vw;
-  h1{
-    font-size: 300%;
-  }
 
   .container{
-    margin:4px 8px;
+    margin:64px 128px;
   }
-}
-.super-fill{
-  max-height:100%;
-  height:100vw;
 
-  .container{
-    margin:12px 24px;
+  :last-child{
+    margin-bottom:0;
+    padding-bottom:0;
+    position: relative;
+    bottom:-8%;
+    z-index: 9999;
   }
 }
-.superheader > .container{
-  margin-top: 3rem;
-}
+
 .superheader.super-collapse > .container{
   margin-top: 3rem;
   top:20%;
 }
 
+
 .superheader::after{
   content:" ";
   clear:both;
-  padding:-6px;
+  padding:-12px;
+  z-index: 1;
 }
 .blueprint-grid{
   background-color: #4e9ad5;
@@ -100,7 +98,8 @@ linear-gradient(to bottom, rgba(255, 255, 255, .1) 1px, transparent 1px);
   padding-right: 15px;
   padding-left: 15px;
   position: relative;
-  z-index: 1;
+  z-index: 10;
+  @include border-box;
 }
 .centered{
   margin:0 auto;
@@ -151,17 +150,21 @@ linear-gradient(to bottom, rgba(255, 255, 255, .1) 1px, transparent 1px);
 
 .block-one {
   padding: 2em;
-  font-size: 2em;
-  color: #BFc0c0;
-  background: #4F5D75;
+  font-size: 1em;
+  color: $darkGrau;
+  background: $grayblau;
 }
 .block-two{
   padding:2em;
-  font-size: 2em;
+  font-size: 1em;
+  color:$wit;
+  background-color:$rot
 }
 .block-three{
   padding:2em;
-  font-size: 2em;
+  font-size: 1em;
+  background-color: $orange;
+  color:$grau;
 }
 .row{
   margin-right: -15px;
@@ -222,10 +225,8 @@ linear-gradient(to bottom, rgba(255, 255, 255, .1) 1px, transparent 1px);
   line-height: 1.42857143;
 }
 
-.group:after {
-  content: "";
-  display: table;
-  clear: both;
+.group{
+  @include group-clearfix;
 }
 //put group on parent of floated elements for clearfix/collapse prevent
 #quincy{
