--- a/scss/_palette.scss
+++ b/scss/_palette.scss
@@ -20,6 +20,7 @@ $teel: rgba(112, 193, 179, 1);
 //     SASS: node-sass --include-path scss scss/style.scss css/main.css --watch
 // */
 $deepBlau: #2d3142;
-$orange: #ef8354;
+$orange: #d09944;
 $grayblau: #4f5d75;
 $darkGrau:#bfc0c0;
+$darkerGrau:#a1a1a1;
