--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,10 +70,11 @@ a{
   }
 
   :last-child{
+    margin-top:0;
+    padding-top:0;
     margin-bottom:0;
     padding-bottom:0;
     position: relative;
-    bottom:-33%;
     z-index: 9999;
   }
 }
@@ -87,7 +88,6 @@ a{
 .superheader::after{
   content:" ";
   clear:both;
-  padding:-12px;
   z-index: 1;
 }
 .blueprint-grid{
