--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,9 +50,8 @@ a{
     font-weight: lighter;
     letter-spacing: 1px;
   }
+  max-height: 100%;
   overflow: auto;
-  padding-top: 30px;
-  padding-bottom: 30px;
   color: inherit;
   background-color: #eee;
   position: relative;
@@ -67,7 +66,7 @@ a{
   }
   :nth-child(2){
     max-width: 48%;
-    margin:6em auto 0 auto;
+    margin:4em auto 0 auto;
   }
 
   :last-child{
@@ -86,7 +85,6 @@ a{
   top:20%;
 }
 
-
 .superheader::after{
   content:" ";
   clear:both;
@@ -96,6 +94,13 @@ a{
   background-color: #4e9ad5;
   background:url(../img/rob-bye-182304.jpg) center no-repeat;
   background-size:133%;
+}
+.fa-linkedin,.fa-github{
+  margin:6px;
+  padding:6px;
+  background: #4e9ad5;
+  border-radius:20%;
+  float:left;
 }
 
 .container{
@@ -161,6 +166,11 @@ a{
 .block-one {
   background-color: $darkerGrau;
   color:$wit;
+
+  .panel-body p{
+    font-size: 1.2em;
+    line-height: 1.225;
+  }
 }
 .block-two{
   color: $darkGrau;
@@ -171,9 +181,9 @@ a{
   color:$wit;
   background-color:$rot
 }
-.panel-heading ~ .panel-body>p{
+.panel-heading > h2{
   margin-bottom: 6px;
-  border-top: 2px solid $grau;
+  border-bottom: 2px solid $grau;
   padding:12px;
 }
 .row{
@@ -187,6 +197,37 @@ a{
     width: 33.33333333%;
   }
 
+}
+
+.portfolio-list{
+  overflow: auto;
+
+  .archilocator{
+    background:url(../img/al-screencap-1.jpg) center no-repeat $grau;
+    background-size:cover;
+  }
+  .archilocator:target{
+    display: block;
+    width: 960px;
+    height: 720px;
+    background:url(../img/al-screencap-1.jpg) center no-repeat;
+  }
+  li{
+    float:left;
+
+  }
+  li:hover .portfolio-content{
+    background-color:rgba(10,10,10,0.667);
+  }
+  .portfolio-item{
+    overflow: auto;
+    width: 384px;
+    height:384px;
+  }
+  .portfolio-content{
+    width: inherit;
+    height:inherit;
+  }
 }
 
 .hidden-section{
@@ -233,6 +274,10 @@ a{
   padding: 10px 16px;
   border-radius: 6px;
   line-height: 1.42857143;
+}
+
+.well{
+  overflow: auto;
 }
 
 .group{
