--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,11 +7,15 @@
 @import url('http://fonts.googleapis.com/css?family=Raleway:700,400,300');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext');
 
+@font-face {
+  font-family: 'Dosis';
+  src: url('../fonts/Dosis/Dosis-Regular.ttf');
+}
 
 
 body{
   background: #bfc0c0;
-  font-family: 'Raleway','Open Sans',sans-serif;
+  font-family: 'Dosis','Raleway','Open Sans',sans-serif;
 }
 h1{
   font-size:3em;
@@ -37,11 +41,31 @@ a{
   margin:0 auto;
   @include border-box;
 }
+.blueprint-grid{
+  background-color: $bluprint;
+  background:url(../img/rob-bye-182304.jpg) center no-repeat;
+  background-size:133%;
+}
+.vaporwave-road{
+  background-color: $deepPurp;
+  background:url(../img/header_bg.png) center no-repeat;
+  background-size:100%;
+}
 .superheader{
+
+  max-height: 100%;
+  overflow: auto;
+  color: $teel;
+  background-color: rgba(0, 0, 0, .5);
+  position: relative;
+  transition: all 0.50s ease-in-out;
+  z-index: 999;
+  box-shadow: 10px 4px 8px #eee;
+  @include border-box;
   h1{
     font-size: 5em;
     font-weight: 700;
-    text-shadow: 6px 2px $darkerGrau;
+    text-shadow: 6px 2px $deepPurp;
   }
 
   span{
@@ -50,19 +74,9 @@ a{
     font-weight: lighter;
     letter-spacing: 1px;
   }
-  max-height: 100%;
-  overflow: auto;
-  color: inherit;
-  background-color: #eee;
-  position: relative;
-  transition: all 0.50s ease-in-out;
-  z-index: 999;
-  box-shadow: 10px 4px 8px rgba(0, 0, 0, .5);
-  @include border-box;
-
 
   .container{
-    margin:20% 20% 0 20%;
+    margin:5% 20% 0 20%;
   }
   :nth-child(2){
     max-width: 48%;
@@ -74,9 +88,9 @@ a{
     padding-top:0;
     margin-bottom:0;
     padding-bottom:0;
-    bottom:-4%;
+    bottom:-12px;
     position: relative;
-    z-index: 9999;
+    z-index: 255;
   }
 }
 
@@ -90,15 +104,11 @@ a{
   clear:both;
   z-index: 1;
 }
-.blueprint-grid{
-  background-color: #4e9ad5;
-  background:url(../img/rob-bye-182304.jpg) center no-repeat;
-  background-size:133%;
-}
+
 .fa-linkedin,.fa-github{
   margin:6px;
   padding:6px;
-  background: #4e9ad5;
+  background: $bluprint;
   border-radius:20%;
   float:left;
 }
