--- a/css/main.css
+++ b/css/main.css
@@ -346,13 +346,12 @@ a {
 
 .superheader {
   max-height: 100%;
-  overflow: auto;
+  overflow: hidden;
   color: #70c1b3;
-  background-color: rgba(0, 0, 0, 0.5);
   position: relative;
   transition: all 0.50s ease-in-out;
   z-index: 999;
-  box-shadow: 10px 4px 8px #eee;
+  height: 60vw;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -367,18 +366,21 @@ a {
     font-weight: lighter;
     letter-spacing: 1px; }
   .superheader .container {
-    margin: 5% 20% 0 20%; }
+    margin: 1% 20% 0 20%; }
   .superheader :nth-child(2) {
     max-width: 48%;
-    margin: 4em auto 0 auto; }
+    margin: 10% auto 10px auto; }
   .superheader :last-child {
     margin-top: 0;
     padding-top: 0;
     margin-bottom: 0;
     padding-bottom: 0;
-    bottom: -12px;
+    bottom: -25%;
     position: relative;
     z-index: 255; }
+  .superheader h2 ~ p {
+    position: relative;
+    top: 128px; }
 
 .superheader.super-collapse > .container {
   margin-top: 3rem;
@@ -451,8 +453,10 @@ a {
   min-height: 333px; }
 
 .block-one {
-  background-color: #a1a1a1;
-  color: #fbfffa; }
+  color: #fbfffa;
+  transition: all 0.50s ease-in-out;
+  background-color: #140C2A;
+  box-shadow: 10px 4px 8px #eee; }
   .block-one .panel-body p {
     font-size: 1.2em;
     line-height: 1.225; }
